give `header` white background to prevent content overlapping

--- a/_scss/layouts/header.scss
+++ b/_scss/layouts/header.scss
@@ -7,6 +7,7 @@ header {
     display: table;
     width: 100%;
     border-bottom: 1px solid $gray-light;
+    background-color: $white;
 }
 
 .logo {
